last added comming soon

--- a/index.html
+++ b/index.html
@@ -28,5 +28,72 @@
         </h1>
       </div>
     </header>
+    <main class="main-body">
+      <section class="offer-section">
+        <div class="offer-main-container">
+          <h2>65% OFF</h2>
+          <h6>OUR HOLIDAY DEALS ARE BETTER</h6>
+          <h4>ALL CATEGORIES</h4>
+          <img src="./images/newyearphoto.png" alt="" />
+        </div>
+      </section>
+      <!-- welcome  -->
+      <section class="midnight-party-container">
+        <div class="midnight-titels">
+          <h1 class="merriweather-font">
+            Welcome to
+            <br />
+            midnight party
+          </h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <button>JOIN NOW</button>
+        </div>
+        <div class="group70">
+          <img src="./images/group70.png" alt="" />
+        </div>
+      </section>
+      <!-- new park hotel  -->
+      <section class="new-park-container">
+        <div class="new-park-contant">
+          <h3><span class="new-prak-span">Place:</span> New Park Hotel</h3>
+          <h3>
+            <span class="new-prak-span">Date:</span> 31 December Night 2023
+          </h3>
+          <h3>
+            <span class="new-prak-span">Time:</span> Evening 7.30 pm to 12.30 am
+          </h3>
+          <button class="new-park-join-btn">JOIN NOW</button>
+        </div>
+      </section>
+      <!-- coming Soon -->
+      <section class="coming-soon">
+        <div class="soon-container">
+          <div class="soon-item1">
+            <h6>NEW BEST OFFER</h6>
+            <h1 class="merriweather-font">Coming Soon</h1>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+          </div>
+          <div class="soon-item2">
+            <img src="./images/ellipse1.png" alt="" />
+          </div>
+          <div class="soon-item3">
+            <h2>2024</h2>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed.
+            </p>
+            <img src="./images/group96.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
