awesome protfolio added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,49 @@
           </div>
         </div>
       </section>
+      <!-- Holidays Sale  -->
+      <section class="holidays-section">
+        <div>
+          <div class="holidays-contant">
+            <h6>WHAT IS FUNCTIONAL</h6>
+            <h1 class="merriweather-font">
+              <span class="Holidays-text">Holidays</span> Sale 50%
+            </h1>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod. Eleifend nunc purus quam id fermentum amet amet sit
+              consectetur.
+            </p>
+          </div>
+          <div class="Holidays-imgs">
+            <img class="holidays-img1" src="./images/group75.png" alt="" />
+            <img class="holidays-img2" src="./images/group44.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- Our Awesome Portfolio -->
+      <section class="Awesome-section">
+        <div>
+          <div class="Awesome-contant">
+            <h6>THE BEST GIFTS</h6>
+            <h2 class="merriweather-font">Our Awesome Portfolio</h2>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. <br />
+              Ipsum sed sodales risus ut pellentesque vel euismod.
+            </p>
+          </div>
+          <div class="Awesome-imgs">
+            <img src="./images/rectangle3.png" alt="" />
+            <img src="./images/rectangle4.png" alt="" />
+            <img src="./images/rectangle5.png" alt="" />
+            <img src="./images/rectangle6.png" alt="" />
+            <img src="./images/rectangle7.png" alt="" />
+            <img src="./images/rectangle8.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
