--- a/index.html
+++ b/index.html
@@ -137,6 +137,63 @@
           </div>
         </div>
       </section>
+      <!-- Subsribe Newsletter -->
+      <section class="subscribe-section">
+        <div class="subscribe-text">
+          <div><img src="./images/group61.png" alt="" /></div>
+          <h2 class="merriweather-font">Subscribe Newsletter</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            <br />
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <form action="" class="subscribe-form">
+            <input
+              class="subscribe-form-email"
+              placeholder="user@gmail.com"
+              type="email"
+            />
+            <input
+              class="subscribe-form-email-sub"
+              type="submit"
+              value="Subscribe"
+            />
+          </form>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer-addres">
+        <div class="addres-items">
+          <p>44, Big Building Roosevelt Street</p>
+          <p>Beach Gardens Florida 33410</p>
+        </div>
+        <div>
+          <div style="display: flex; align-items: center; gap: 5px">
+            <img src="./icons/call.png" alt="" />
+            <p>+00 123 584 124</p>
+          </div>
+          <div style="display: flex; align-items: center; gap: 5px">
+            <img src="./icons/website.png" alt="" />
+            <p style="margin: 0">www.website.com</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footer-icon">
+        <div>
+          <a href=""> <img src="./icons/facebook.png" alt="" /></a>
+          <a href=""> <img src="./icons/instagram.png" alt="" /></a>
+          <a href=""> <img src="./icons/twitter.png" alt="" /></a>
+          <a href=""> <img src="./icons/linkedin.png" alt="" /></a>
+        </div>
+      </div>
+      <hr />
+      <div style="display: flex; justify-content: space-between">
+        <p>2017, All Rights Reserved.</p>
+        <p>Unsubscribe</p>
+      </div>
+    </footer>
   </body>
 </html>
