--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
       <hr />
       <div class="footer-icon">
         <div>
-          <a href=""> <img src="./icons/facebook.png" alt="" /></a>
-          <a href=""> <img src="./icons/instagram.png" alt="" /></a>
-          <a href=""> <img src="./icons/twitter.png" alt="" /></a>
-          <a href=""> <img src="./icons/linkedin.png" alt="" /></a>
+          <a href=""> <img src="icons/facebook.png" alt="" /></a>
+          <a href=""> <img src="icons/instagram.png" alt="" /></a>
+          <a href=""> <img src="icons/twitter.png" alt="" /></a>
+          <a href=""> <img src="icons/linkedin.png" alt="" /></a>
         </div>
       </div>
       <hr />
