--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
         </div>
         <div>
           <div style="display: flex; align-items: center; gap: 5px">
-            <img src="./icons/call.png" alt="" />
+            <img src="./icons/call.jpg" alt="" />
             <p>+00 123 584 124</p>
           </div>
           <div style="display: flex; align-items: center; gap: 5px">
-            <img src="./icons/website.png" alt="" />
+            <img src="./icons/website.jpg" alt="" />
             <p style="margin: 0">www.website.com</p>
           </div>
         </div>
@@ -183,10 +183,10 @@
       <hr />
       <div class="footer-icon">
         <div>
-          <a href=""> <img src="icons/facebook.png" alt="" /></a>
-          <a href=""> <img src="icons/instagram.png" alt="" /></a>
-          <a href=""> <img src="icons/twitter.png" alt="" /></a>
-          <a href=""> <img src="icons/linkedin.png" alt="" /></a>
+          <a href=""> <img src="icons/facebook.jpg" alt="" /></a>
+          <a href=""> <img src="icons/instagram.jpg" alt="" /></a>
+          <a href=""> <img src="icons/twitter.jpg" alt="" /></a>
+          <a href=""> <img src="icons/linkedin.jpg" alt="" /></a>
         </div>
       </div>
       <hr />
